# cloud-game-rs

./: .dockerignore  .gitignore  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: codeql.yml
arcade-portal/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
arcade-portal/public/: index.html
arcade-portal/scripts/: webrtc-benchmark.mjs
arcade-portal/src/: App.css  App.js  App.jsx  App.test.js  controller.css  controller.jsx  home.css  home.js  home.jsx  index.css  index.js  index.jsx
arcade-portal/tests/: safari-home-to-room.spec.js
arcade-signal/: Cargo.toml  README.md
arcade-signal-protocol/: Cargo.toml
arcade-signal-protocol/src/: audio.rs  ids.rs  lib.rs  rtc.rs
arcade-signal/src/: config.rs  controllers.rs  main.rs  protocol.rs  registry.rs  ws.rs
arcade-worker/: Cargo.toml  test_openh264.rs
arcade-worker/assets/games/: README.md
arcade-worker/src/: audio_sender.rs  emulator_thread.rs  game_config.rs  health.rs  lib.rs  libretro.rs  main.rs  main_tests.rs  room.rs  room_state.rs  signal_client.rs  signal_router.rs  url_utils.rs  video_sender.rs  webrtc_session.rs
deploy/: .env.native.example  .env.production.example  container-stack.sh  docker-compose.production.yml  native-stack.sh  ws-smoke-check.py
deploy/dockerfiles/: portal.Dockerfile  signal.Dockerfile  worker.Dockerfile
deploy/lib/: env_file.sh  signal_endpoints.sh
deploy/nginx/: portal-entrypoint.sh  portal.conf
protocol/: arcade_protocol.json  generate_protocol.mjs
(+47 files in other folders)
