[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
arcade-signal-protocol = { path = "../arcade-signal-protocol" }
bytes = "1.10.0"
crossbeam-channel = "0.5"
libloading = "0.8"
base64 = "0.22"
openh264 = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc = "0.12"
rtcp = "0.17"
thiserror = "1.0"

[[bin]]
name = "worker"
path = "src/main.rs"

[[bin]]
name = "test_openh264"
path = "test_openh264.rs"
